[package]
name = "kemuler-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cfg-if = "1.0.0"
kemuler =  { git = "https://github.com/kemuler/kemuler" } 

[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Foundation",
  "Win32_System_Threading",
]
